@@ -13,10 +13,10 @@ Rules-Requires-Root: no
 Build-Depends:
  debhelper (>= 11),
  devscripts,
- lld-14,
- clang-14,
- clang-format-14,
- libclang-rt-14-dev,
+ lld-16,
+ clang-16,
+ clang-format-16,
+ libclang-rt-16-dev,
  rustc,
  python3,
  pkg-config,
