@@ -30,6 +30,7 @@ chromium (117.0.5938.48-1) unstable; urgency=high
       const member inside a struct.
   * Switch to using bundled brotli, as the version in debian is too old.
     And so we can drop d/patches/bookworm/brotli.patch, too.
+  * Switch from clang-14 to clang-16.
 
  -- Andres Salomon <dilinger@debian.org>  Fri, 08 Sep 2023 19:03:54 -0400
 
